@@ -1,7 +1,7 @@
 // code by jph
 package ch.alpine.tensor.mat;
 
-import java.util.Arrays;
+import java.util.List;
 
 import ch.alpine.tensor.Tensor;
 import ch.alpine.tensor.TensorRuntimeException;
@@ -29,7 +29,7 @@ public enum MatrixQ {
    * @param cols
    * @return true if tensor is a matrix with given number of rows and columns */
   public static boolean ofSize(Tensor tensor, int rows, int cols) {
-    return new Dimensions(tensor).isArrayWith(Arrays.asList(rows, cols)::equals);
+    return new Dimensions(tensor).isArrayWith(List.of(rows, cols)::equals);
   }
 
   /** @param tensor
